2010-12-03  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Configuration Variables and Options),
	(Configuration Variables for @@-Commands): rename+edit.

2010-12-02  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (texi2any Configuration Variables): rather than
	makeinfo, I guess.
	(Other Configuration Variables): Split off into new node.

2010-12-01  Patrice Dumas  <pertusus@free.fr>

	* texi2html/texi2html.pl: don't warn when a user-defined macro
	without argument is called without braces.  Report from Werner 
 	Lemberg.

2010-11-28  Karl Berry  <karl@gnu.org>

	* texi2html/texi2html.pl (prepare_htmlxref): ignore whitespace
	before variable name in variable assignments.

2010-11-26  Karl Berry  <karl@gnu.org>

	* util/gendocs.sh: mention canonical script location.

	* doc/texinfo.txi (node-related nodes): remove @refill, refill
	source lines, small text changes.
	(throughout): use "an <@@-command>" consistently, instead of "a".

2010-11-26  Patrice Dumas  <pertusus@free.fr>

	* texi2html/texi2html.pl: don't warn whan a macro defined with
	zero arguments is called without braces.  Report from Werner LEMBERG.

2010-11-18  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (GNU Sample Texts): update and make self-consistent.

2010-11-17  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi: uniqify more index entries.

2010-11-16  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi: uniqify some index entries.

2010-11-15  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Indexing Commands): recommend unique index
	entries.  (bug-texinfo thread starting 29 Jul 2010 23:23:02)
	(throughout): consistently @code for <tags> in index entries.

2010-11-14  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Invoking Macros): attempt to clarify
	calling without braces (only allowed if the macro takes exactly
	one arg), and leaving arguments out (ok).

2010-11-11  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Macro Details): mention non-expansion contexts